--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "--camera=pylon",
-                "/dev/video0"
+                "--camera=pylon"
             ]
         }
     ]
